<resources>
    <string name="app_name">Pokémod GO</string>
    <string name="service">Start Service</string>
    <string name="attach">Auto-Launch Pokémon GO</string>
    <string name="enhanced_throw">Enhanced Throw</string>
    <string name="encounter_iv">Show Encounter IV</string>
    <string name="fastcatch">Fast Catch</string>
    <string name="settings">Settings</string>
    <string name="modules">Module Settings</string>
    <string name="force_cleanup">Force Cleanup</string>
    <string name="service_warning">Remember to disable the service when you are done. Keeping the service running is a security risk!</string>
    <string name="credits">Made with ♥ by The Pokémod Group</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_modules">Enabled Modules</string>
    <string name="menu_settings">Module Settings</string>
    <string name="pokemon_go_not_found">Pokémon GO not found.</string>
    <string name="pokemon_version_display">Pokémon GO Version: %s</string>
    <string name="unsupported_version">The version %s of Pokémon GO is not supported! Please use %s.</string>
    <string name="flee_help">Quick Flee</string>
    <string name="supported_version">0.161.1</string>
</resources>
