<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <SwitchPreference android:defaultValue="true"
        android:key="get_encounter_stats"
        android:id="@+id/get_encounter_stats"
        android:title="@string/encounter_iv"/>
    <SwitchPreference android:defaultValue="true"
        android:key="perfected_throw"
        android:summary="Guarantees excellent throws, Pokémon doesn't attack, move or fly. Also, if you're bad enough, any missed ball returns to your hand."
        android:title="Perfect Throw" />
    <SwitchPreference android:defaultValue="true"
        android:key="keep_encounter_ui"
        android:summary='Keeps the "Exit Encounter" icon enabled all the time.'
        android:title="@string/flee_help" />
    <SwitchPreference android:defaultValue="true"
        android:key="ivnames"
        android:summary="Replaces Pokémon names with their IV in your Pokémonlist."
        android:title="Replace names with IV in inventory" />
    <SwitchPreference android:defaultValue="false"
        android:key="nameplateiv"
        android:summary="During encounters the Pokémon name is replaced with IV%, LVL and stats"
        android:title="Show stats on Encounternameplates" />
    <SwitchPreference android:defaultValue="false"
        android:key="fast_encounter"
        android:summary="Speeds up considerably the animation after successfully catching a Pokémon."
        android:title="@string/fastcatch" />
    <SwitchPreference android:defaultValue="false"
        android:key="skip_encounter_intro"
        android:summary="Immediately loads up Pokémon encounters ready to catch."
        android:title="Skip encounter intros" />
    <SwitchPreference android:defaultValue="false"
        android:key="masstransfer"
        android:summary="Allows mass transferring any kind of pokémon at once, regardless of type."
        android:title="Mass Transfer any Pokémon" />
    <SwitchPreference android:defaultValue="false"
        android:key="get_inventory_stats"
        android:title="Get Inventory IVs"/>
    <SwitchPreference android:defaultValue="false"
        android:key="get_raid_stats"
        android:summary="Shows raid boss' moveset up to around two minutes before the egg hatches and while the raid is active."
        android:title="Show Raid Encounter Moves" />
    <SwitchPreference android:defaultValue="false"
        android:key="fast_powerup"
        android:summary="Skips the powerup animation and re-opens the powerup prompt. CP displayed in the prompt are not always correct!"
        android:title="Skip powerup sequence" />
    <SwitchPreference
        android:defaultValue="false"
        android:enabled="false"
        android:key="bypass_device_detection"
        android:onClick="showComingSoonToast"
        android:summary="Coming soon!"
        android:title="Bypass Device not Compatible/Root Detection" />
</PreferenceScreen>